@@ -1,29 +1,31 @@
 package com.example.demo.controller;
 
-import com.example.demo.model.product;
-import com.example.demo.service.productService;
-import org.springframework.web.bind.annotation.*;
+import com.example.demo.model.Product;
+import com.example.demo.service.ProductService;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alerts")
 @CrossOrigin(origins = "*")
 public class AlertController {
 
-    private final productService productService;
+    private final ProductService productService;
 
-    public AlertController(productService productService) {
+    public AlertController(ProductService productService) {
         this.productService = productService;
     }
 
     @GetMapping("/low-stock")
-    public List<product> getLowStockProducts() {
+    public List<Product> getLowStockProducts() {
 
         return productService.getAllProducts()
                 .stream()
                 .filter(productService::isLowStock)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
